# rules_terser

./: .bazelrc  .gitignore  .pre-commit-config.yaml  .prettierignore  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  internal_deps.bzl  yamlfmt.yaml
.aspect/: config.axl  version.axl
.aspect/cli/: config.yaml
.aspect/workflows/: README.md  bazelrc  config.yaml  deps.bzl
.bcr/: config.yml  metadata.template.json  source.template.json
.circleci/: BUILD.bazel  config.yml
.github/workflows/: ci-vanilla-bazel.yaml  ci-workflows.yaml  ci.bazelrc  ci.yaml  release.yml  release_prep.sh  tag.yaml  workspace_snippet.sh
docs/: BUILD.bazel  rules.md
e2e/smoke/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  package.json
e2e/workspace/: BUILD  WORKSPACE  expected.js  in.js  pnpm-lock.yaml
examples/macro/: BUILD.bazel  my_terser.bzl
examples/minify/: BUILD.bazel  expected.js  in.js
scripts/: mirror_release.sh
terser/: BUILD.bazel  defs.bzl  dependencies.bzl  repositories.bzl
terser/private/: BUILD.bazel  run_terser.js  runner.cjs  terser.bzl  v5.12.1.bzl  versions.bzl
terser/private/v5.12.1/: node_modules.bzl  repositories.bzl
terser/private/v5.13.0/: defs.bzl  node_modules.bzl  package.json  pnpm-lock.yaml  repositories.bzl
terser/private/v5.14.0/: defs.bzl  package.json  pnpm-lock.yaml  repositories.bzl
terser/tests/: BUILD.bazel  versions_test.bzl
tools/: BUILD.bazel  preset.bazelrc
tools/format/: BUILD.bazel
tools/gazelle/: BUILD.bazel
