load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

alias(
    name = "format",
    actual = "//tools/format",
    tags = ["manual"],  # tag as manual so windows ci does not build it by default
)

alias(
    name = "buildifier",
    actual = "@buildifier_prebuilt//buildifier",
    tags = ["manual"],  # tag as manual so windows ci does not build it by default
)

alias(
    name = "gazelle",
    actual = "//tools/gazelle",
    tags = ["manual"],  # tag as manual so windows ci does not build it by default
)
