load("@bazel_lib//:bzl_library.bzl", "bzl_library")
load("@bazel_lib//lib:utils.bzl", bazel_lib_utils = "utils")

# For stardoc to reference the files
exports_files(["defs.bzl"])

bzl_library(
    name = "dependencies",
    srcs = ["dependencies.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ] + (["@bazel_tools//tools/build_defs/repo:cache.bzl"] if bazel_lib_utils.is_bazel_7_or_greater() else []),
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//terser/private:terser",
        "@aspect_rules_js//js:defs",
        "@aspect_tools_telemetry_report//:defs.bzl",
        "@bazel_lib//lib:copy_file",
    ] + (["@bazel_tools//tools/build_defs/repo:cache.bzl"] if bazel_lib_utils.is_bazel_7_or_greater() else []),
)
