load("@aspect_rules_terser//terser:defs.bzl", "terser")
load("@bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

terser(
    name = "minified",
    srcs = ["in.js"],
    args = ["--comments"],
    node_modules = "//:node_modules",
    sourcemap = False,
)

write_source_files(
    name = "minified_diff",
    files = {
        "expected.js": ":minified",
    },
)
