bazel_dep(name = "aspect_rules_terser", version = "0.0.0", dev_dependency = True)
local_path_override(
    module_name = "aspect_rules_terser",
    path = "../..",
)

bazel_dep(name = "aspect_rules_js", version = "2.0.0", dev_dependency = True)
bazel_dep(name = "aspect_bazel_lib", version = "2.19.3", dev_dependency = True)

# Transitive dep of aspect_rules_js; older versions resolved by the 2.0.0
# lower-bound fail on Bazel 9 (removed `incompatible_use_toolchain_transition`).
bazel_dep(name = "rules_nodejs", version = "6.7.4", dev_dependency = True)

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")
