# Override http_archive for local testing
local_repository(
    name = "aspect_rules_terser",
    path = "../..",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

######################
# rules_terser setup #
######################

# Fetch the Bazel module dependencies

load("@aspect_rules_terser//terser:dependencies.bzl", "rules_terser_dependencies")

# Override to newer version for windows fixes in e2e/smokes
http_archive(
    name = "aspect_bazel_lib",
    sha256 = "3522895fa13b97e8b27e3b642045682aa4233ae1a6b278aad6a3b483501dc9f2",
    strip_prefix = "bazel-lib-2.20.0",
    url = "https://github.com/bazel-contrib/bazel-lib/releases/download/v2.20.0/bazel-lib-v2.20.0.tar.gz",
)

rules_terser_dependencies()

# Fetch and register a nodejs interpreter, if you haven't already

load("@aspect_rules_js//js:toolchains.bzl", "DEFAULT_NODE_VERSION", "rules_js_register_toolchains")

rules_js_register_toolchains(node_version = DEFAULT_NODE_VERSION)

load("@aspect_rules_js//npm:repositories.bzl", "npm_translate_lock")

npm_translate_lock(
    name = "npm",
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)

load("@npm//:repositories.bzl", "npm_repositories")

npm_repositories()
