"Uses a macro which calls terser, skipping the custom rule altogether"

load("//terser/tests:asserts.bzl", "assert_contains")
load(":my_terser.bzl", "terser_help")

terser_help(
    name = "help",
    out = "help.txt",
)

# Asserting that the macro has the expected output.
assert_contains(
    name = "test",
    actual = "help.txt",
    expected = "Usage: run_terser [options] [files...]",
)
