load("@aspect_rules_terser//terser:defs.bzl", "terser_minified")
load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")

terser_minified(
    name = "minified",
    srcs = ["in.js"],
    sourcemap = False,
)

write_source_files(
    name = "minified_diff",
    files = {
        "expected.js": ":minified",
    },
)
