load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@aspect_rules_terser//terser:defs.bzl", "terser")

terser(
    name = "minified",
    srcs = ["in.js"],
    args = ["--comments"],
    node_modules = "//:node_modules",
    sourcemap = False,
)

write_source_files(
    name = "minified_diff",
    files = {
        "expected.js": ":minified",
    },
)
