load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

# gazelle:exclude v*.*.*/*

exports_files([
    "terser_config.default.json",
    "run_terser.js",
])

bzl_library(
    name = "terser",
    srcs = ["terser.bzl"],
    visibility = ["//terser:__subpackages__"],
    deps = [
        "@aspect_bazel_lib//lib:copy_to_bin",
        "@aspect_rules_js//js:libs",
        "@aspect_rules_js//js:providers",
        "@rules_nodejs//nodejs:bzl",
    ],
)

# gazelle:ignore
bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//terser:__subpackages__"],
)
