load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load(":versions_test.bzl", "versions_test_suite")

versions_test_suite(name = "versions_test")

bzl_library(
    name = "asserts",
    srcs = ["asserts.bzl"],
    visibility = ["//visibility:public"],
    deps = ["@bazel_skylib//rules:write_file"],
)
