load("@aspect_rules_lint//format:defs.bzl", "format_multirun")

package(default_visibility = ["//:__subpackages__"])

format_multirun(
    name = "format",
    go = "@aspect_rules_lint//format:gofumpt",
    shell = "@aspect_rules_lint//format:shfmt",
    tags = ["manual"],
    yaml = "@aspect_rules_lint//format:yamlfmt",
)

